// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBar@desktop Should not render icon 1`] = `
<Component
  hasIcon={false}
>
  <Component
    className="MessageBar"
    hasIcon={false}
  >
    <Component
      className="MessageBar"
      hasIcon={false}
    >
      <Component
        className="MessageBar"
        hasIcon={false}
      >
        <Component
          className="MessageBar"
          hasIcon={false}
        >
          <Component
            className="MessageBar"
            hasIcon={false}
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
              leading={false}
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@desktop Should render close element 1`] = `
<Component
  onClose={[MockFunction]}
>
  <Component
    className="MessageBar"
    onClose={[MockFunction]}
  >
    <Component
      className="MessageBar"
      onClose={[MockFunction]}
    >
      <Component
        className="MessageBar"
        onClose={[MockFunction]}
      >
        <Component
          className="MessageBar"
          onClose={[MockFunction]}
        >
          <Component
            className="MessageBar"
            onClose={[MockFunction]}
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
              rightSpace="xs"
              trailing={
                <Unknown
                  onClick={[MockFunction]}
                />
              }
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper ListTile-Wrapper_rightSpace_xs"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
                <div
                  className="ListTile-Trailing"
                >
                  <Component
                    onClick={[MockFunction]}
                  >
                    <Component
                      className="MessageBar-Close"
                      glyph="type-cross"
                      onClick={[MockFunction]}
                    >
                      <Component
                        className="Icon MessageBar-Close"
                        glyph="type-cross"
                        onClick={[MockFunction]}
                      >
                        <Component
                          className="Icon_glyph_type-cross MessageBar-Close"
                          glyph="type-cross"
                          onClick={[MockFunction]}
                        >
                          <Icon
                            className="Icon Icon_hasGlyph Icon_glyph_type-cross MessageBar-Close"
                            glyph="type-cross"
                            onClick={[MockFunction]}
                          >
                            <span
                              aria-hidden={true}
                              className="Icon Icon_hasGlyph Icon_glyph_type-cross MessageBar-Close"
                              onClick={[MockFunction]}
                              style={Object {}}
                            >
                              <svg
                                focusable="false"
                                height="14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <polygon
                                  points="14,0.7 13.3,0 7,6.3 0.7,0 0,0.7 6.3,7 0,13.3 0.7,14 7,7.7 13.3,14 14,13.3 7.7,7"
                                />
                              </svg>
                            </span>
                          </Icon>
                        </Component>
                      </Component>
                    </Component>
                  </Component>
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@desktop Should render with default props 1`] = `
<Component>
  <Component
    className="MessageBar"
  >
    <Component
      className="MessageBar"
    >
      <Component
        className="MessageBar"
      >
        <Component
          className="MessageBar"
        >
          <Component
            className="MessageBar"
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@touch-pad Should not render icon 1`] = `
<Component
  hasIcon={false}
>
  <Component
    className="MessageBar"
    hasIcon={false}
  >
    <Component
      className="MessageBar"
      hasIcon={false}
    >
      <Component
        className="MessageBar"
        hasIcon={false}
      >
        <Component
          className="MessageBar"
          hasIcon={false}
        >
          <Component
            className="MessageBar"
            hasIcon={false}
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
              leading={false}
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@touch-pad Should render close element 1`] = `
<Component
  onClose={[MockFunction]}
>
  <Component
    className="MessageBar"
    onClose={[MockFunction]}
  >
    <Component
      className="MessageBar"
      onClose={[MockFunction]}
    >
      <Component
        className="MessageBar"
        onClose={[MockFunction]}
      >
        <Component
          className="MessageBar"
          onClose={[MockFunction]}
        >
          <Component
            className="MessageBar"
            onClose={[MockFunction]}
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
              rightSpace="xs"
              trailing={
                <Unknown
                  onClick={[MockFunction]}
                />
              }
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper ListTile-Wrapper_rightSpace_xs"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
                <div
                  className="ListTile-Trailing"
                >
                  <Component
                    onClick={[MockFunction]}
                  >
                    <Component
                      className="MessageBar-Close"
                      glyph="type-cross"
                      onClick={[MockFunction]}
                    >
                      <Component
                        className="Icon MessageBar-Close"
                        glyph="type-cross"
                        onClick={[MockFunction]}
                      >
                        <Component
                          className="Icon_glyph_type-cross MessageBar-Close"
                          glyph="type-cross"
                          onClick={[MockFunction]}
                        >
                          <Icon
                            className="Icon Icon_hasGlyph Icon_glyph_type-cross MessageBar-Close"
                            glyph="type-cross"
                            onClick={[MockFunction]}
                          >
                            <span
                              aria-hidden={true}
                              className="Icon Icon_hasGlyph Icon_glyph_type-cross MessageBar-Close"
                              onClick={[MockFunction]}
                              style={Object {}}
                            >
                              <svg
                                focusable="false"
                                height="14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <polygon
                                  points="14,0.7 13.3,0 7,6.3 0.7,0 0,0.7 6.3,7 0,13.3 0.7,14 7,7.7 13.3,14 14,13.3 7.7,7"
                                />
                              </svg>
                            </span>
                          </Icon>
                        </Component>
                      </Component>
                    </Component>
                  </Component>
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@touch-pad Should render with default props 1`] = `
<Component>
  <Component
    className="MessageBar"
  >
    <Component
      className="MessageBar"
    >
      <Component
        className="MessageBar"
      >
        <Component
          className="MessageBar"
        >
          <Component
            className="MessageBar"
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@touch-phone Should not render icon 1`] = `
<Component
  hasIcon={false}
>
  <Component
    className="MessageBar"
    hasIcon={false}
  >
    <Component
      className="MessageBar"
      hasIcon={false}
    >
      <Component
        className="MessageBar"
        hasIcon={false}
      >
        <Component
          className="MessageBar"
          hasIcon={false}
        >
          <Component
            className="MessageBar"
            hasIcon={false}
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
              leading={false}
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@touch-phone Should render close element 1`] = `
<Component
  onClose={[MockFunction]}
>
  <Component
    className="MessageBar"
    onClose={[MockFunction]}
  >
    <Component
      className="MessageBar"
      onClose={[MockFunction]}
    >
      <Component
        className="MessageBar"
        onClose={[MockFunction]}
      >
        <Component
          className="MessageBar"
          onClose={[MockFunction]}
        >
          <Component
            className="MessageBar"
            onClose={[MockFunction]}
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
              rightSpace="xs"
              trailing={
                <Unknown
                  onClick={[MockFunction]}
                />
              }
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper ListTile-Wrapper_rightSpace_xs"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
                <div
                  className="ListTile-Trailing"
                >
                  <Component
                    onClick={[MockFunction]}
                  >
                    <Component
                      className="MessageBar-Close"
                      glyph="type-cross"
                      onClick={[MockFunction]}
                    >
                      <Component
                        className="Icon MessageBar-Close"
                        glyph="type-cross"
                        onClick={[MockFunction]}
                      >
                        <Component
                          className="Icon_glyph_type-cross MessageBar-Close"
                          glyph="type-cross"
                          onClick={[MockFunction]}
                        >
                          <Icon
                            className="Icon Icon_hasGlyph Icon_glyph_type-cross MessageBar-Close"
                            glyph="type-cross"
                            onClick={[MockFunction]}
                          >
                            <span
                              aria-hidden={true}
                              className="Icon Icon_hasGlyph Icon_glyph_type-cross MessageBar-Close"
                              onClick={[MockFunction]}
                              style={Object {}}
                            >
                              <svg
                                focusable="false"
                                height="14"
                                width="14"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <polygon
                                  points="14,0.7 13.3,0 7,6.3 0.7,0 0,0.7 6.3,7 0,13.3 0.7,14 7,7.7 13.3,14 14,13.3 7.7,7"
                                />
                              </svg>
                            </span>
                          </Icon>
                        </Component>
                      </Component>
                    </Component>
                  </Component>
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`MessageBar@touch-phone Should render with default props 1`] = `
<Component>
  <Component
    className="MessageBar"
  >
    <Component
      className="MessageBar"
    >
      <Component
        className="MessageBar"
      >
        <Component
          className="MessageBar"
        >
          <Component
            className="MessageBar"
          >
            <ListTile
              alignItems="baseline"
              className="MessageBar"
            >
              <div
                className="ListTile ListTile_alignItems_baseline MessageBar"
              >
                <div
                  className="ListTile-Wrapper"
                >
                  <div
                    className="MessageBar-Content"
                  />
                </div>
              </div>
            </ListTile>
          </Component>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;
